// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`interpolate acceptance test 1`] = `
[
  "Hello ",
  "Sébastien",
  " how are you ",
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "3",
    "props": {
      "children": "today",
    },
    "type": "span",
  },
  "? Another ",
  "{unprovidedValue}",
  "!",
]
`;

exports[`interpolate placeholders with JSX values 1`] = `
[
  "Hello ",
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "1",
    "props": {
      "children": "Sébastien",
    },
    "type": "b",
  },
  " how are you ",
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "3",
    "props": {
      "children": "today",
    },
    "type": "span",
  },
  "?",
]
`;

exports[`interpolate placeholders with mixed vales 1`] = `
[
  "Hello ",
  "Sébastien",
  " how are you ",
  {
    "$$typeof": Symbol(react.transitional.element),
    "_owner": null,
    "_store": {},
    "key": "3",
    "props": {
      "children": "today",
    },
    "type": "span",
  },
  "?",
]
`;
